Canvas appeared and size adjusted. Comments

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html>		<!-- -->
 	<head>
 		<title> Mountain Hunt by: Alisia Martinez </title>
 		<!-- Put all script imports here -->
-		<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+
 	</head>
 	<body> 
-		<div id="main"> 
-			
+		<div id="main"> <!-- main window for erryythinngggg -->
+			<div id="test"> 
+				
+				
+			</div>	
 		</div>
-		
-		
 		
 		
 	</body>
 	
 	
-	
+	<link rel="stylesheet" type="text/css" href="main.css"> <!-- main.css linked -->
+	<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script> <!-- external js library -->
 </html>
